src/main/java/application/testData/invalidRandomAddresses/easy/RandomAddressesWithWrongField.java
package application.testData.invalidRandomAddresses.easy;

public class RandomAddressesWithWrongField {
    // se extrage fieldul care trebuie completat gresit. prima adresa e pt acest field
}
